--- a/EasyLayer.ipynb
+++ b/EasyLayer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "012ce352-8408-4ee7-a137-b777c4b7070c",
    "metadata": {
     "jupyter": {
@@ -37,6 +37,7 @@
     "        print(f\"{entity} > {metric}:{value}\")\n",
     "    \n",
     "    def run(self, entities):\n",
+    "        self.entities = []\n",
     "        for entity in entities:\n",
     "            if entity._type == \"feature\":\n",
     "                self.entities.append(Feature(entity))\n",
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "bd5b44ac-b8ef-4386-a049-352703d29a2e",
    "metadata": {
     "tags": []
@@ -118,72 +119,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "users_dataset > Users Count:3\n"
+      "--- Running Project: ltv_project ---\n",
+      "Installing sklearn...\n",
+      "Installing pandas...\n",
+      "\n",
+      "Building users_dataset\n",
+      "users_dataset > Users Count:3\n",
+      "\n",
+      "Training ltv_model\n",
+      "   id  name     birth   age\n",
+      "0   1   tom  01011999  22.0\n",
+      "1   2  nick  01011983  38.0\n",
+      "2   3  juli  01012002  19.0\n",
+      "ltv_model > accuracy:0.87\n",
+      "\n",
+      "--- Run Complete! ---\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>birth</th>\n",
-       "      <th>age</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>tom</td>\n",
-       "      <td>01011999</td>\n",
-       "      <td>22.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>nick</td>\n",
-       "      <td>01011983</td>\n",
-       "      <td>38.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>juli</td>\n",
-       "      <td>01012002</td>\n",
-       "      <td>19.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id  name     birth   age\n",
-       "0   1   tom  01011999  22.0\n",
-       "1   2  nick  01011983  38.0\n",
-       "2   3  juli  01012002  19.0"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -206,22 +157,14 @@
     "layer = Layer(project_name = \"ltv_project\", environment='requirements.txt')\n",
     "\n",
     "# ++ To run the whole project on Layer Infra\n",
-    "# layer.run([build_users, train])\n",
+    "layer.run([build_users, train])\n",
     "\n",
     "# ++ To train model on Layer infra\n",
     "# layer.run([train])\n",
     "\n",
     "# ++ To debug the code locally, just call the function:\n",
-    "build_users()"
+    "# build_users()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f97a3fd5-b8fe-466d-9d21-8224e8432bd2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
