Added store sales notebooks

--- a/titanic/titanic.ipynb
+++ b/titanic/titanic.ipynb
@@ -2,30 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- Layer Infra: Running Project: ltv_project ---\n",
-      "Layer Infra: Installing scikit-learn>=0.18...\n",
-      "\n",
-      "Building raw_passengers...\n",
-      "\traw_passengers > Total passengers: 891\n",
-      "\n",
-      "Building features...\n",
-      "\tfeatures > Features: ['Survived', 'Pclass', 'Sex', 'Age', 'SibSp', 'Parch', 'Fare']\n",
-      "\tfeatures > Total Count: 891\n",
-      "\n",
-      "Training survival_model...\n",
-      "\tsurvival_model > Training data count: 891\n",
-      "\tsurvival_model > Metric >accuracy:0.7933\n",
-      "\n",
-      "--- Layer Infra: Run Complete! ---\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'Layer' from 'layer' (/Users/mehmetecevit/.pyenv/versions/3.8.5/lib/python3.8/site-packages/layer/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/d3/zq21tm7n5xz_zwlx6rrzlmk80000gn/T/ipykernel_56281/3471330798.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'..'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mlayer\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mLayer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdataset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mensemble\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'Layer' from 'layer' (/Users/mehmetecevit/.pyenv/versions/3.8.5/lib/python3.8/site-packages/layer/__init__.py)"
      ]
     }
    ],
