Removed debug lines

--- a/storesales/storesales-ts-starter.ipynb
+++ b/storesales/storesales-ts-starter.ipynb
@@ -119,8 +119,8 @@
        " '__init__.py',\n",
        " 'README.md',\n",
        " 'storesales-ts-starter_original.ipynb',\n",
-       " 'train.csv',\n",
-       " '.ipynb_checkpoints']"
+       " '.ipynb_checkpoints',\n",
+       " 'train_sampled.csv']"
       ]
      },
      "execution_count": 2,
@@ -157,10 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "layer = Layer(\"store-sales\")\n",
-    "\n",
-    "dfpd.read_csv(path+'train.csv', index_col=0).sample(50000)\n",
-    "pd.write_csv("
+    "layer = Layer(\"store-sales\")"
    ]
   },
   {
@@ -192,7 +189,7 @@
    "source": [
     "@dataset(\"train\")\n",
     "def build_train_data():\n",
-    "    return pd.read_csv(path+'train.csv', index_col=0).sample(50000)\n",
+    "    return pd.read_csv(path+'train_sampled.csv', index_col=0)\n",
     "\n",
     "@dataset(\"test\")\n",
     "def build_test_data():\n",
@@ -237,7 +234,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of train samples:  25000\n",
+      "Number of train samples:  50000\n",
       "Number of test samples:  28512\n",
       "Number of features:  5\n"
      ]
@@ -305,43 +302,43 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>867069</th>\n",
-       "      <td>2014-05-03</td>\n",
-       "      <td>37</td>\n",
-       "      <td>PLAYERS AND ELECTRONICS</td>\n",
-       "      <td>0.00</td>\n",
+       "      <th>2890663</th>\n",
+       "      <td>2017-06-15</td>\n",
+       "      <td>16</td>\n",
+       "      <td>POULTRY</td>\n",
+       "      <td>48.267002</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1234427</th>\n",
-       "      <td>2014-11-25</td>\n",
-       "      <td>44</td>\n",
-       "      <td>PREPARED FOODS</td>\n",
-       "      <td>372.10</td>\n",
+       "      <th>590393</th>\n",
+       "      <td>2013-11-28</td>\n",
+       "      <td>24</td>\n",
+       "      <td>MAGAZINES</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1103847</th>\n",
-       "      <td>2014-09-13</td>\n",
-       "      <td>30</td>\n",
-       "      <td>PRODUCE</td>\n",
-       "      <td>386.91</td>\n",
+       "      <th>663785</th>\n",
+       "      <td>2014-01-09</td>\n",
+       "      <td>33</td>\n",
+       "      <td>MAGAZINES</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>763588</th>\n",
-       "      <td>2014-03-06</td>\n",
+       "      <th>2772047</th>\n",
+       "      <td>2017-04-09</td>\n",
+       "      <td>38</td>\n",
+       "      <td>HARDWARE</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>817057</th>\n",
+       "      <td>2014-04-05</td>\n",
        "      <td>34</td>\n",
-       "      <td>BABY CARE</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1265638</th>\n",
-       "      <td>2014-12-13</td>\n",
-       "      <td>20</td>\n",
-       "      <td>LIQUOR,WINE,BEER</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>EGGS</td>\n",
+       "      <td>51.000000</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -349,13 +346,13 @@
        "</div>"
       ],
       "text/plain": [
-       "               date  store_nbr                   family   sales  onpromotion\n",
-       "id                                                                          \n",
-       "867069   2014-05-03         37  PLAYERS AND ELECTRONICS    0.00            0\n",
-       "1234427  2014-11-25         44           PREPARED FOODS  372.10            0\n",
-       "1103847  2014-09-13         30                  PRODUCE  386.91            0\n",
-       "763588   2014-03-06         34                BABY CARE    1.00            0\n",
-       "1265638  2014-12-13         20         LIQUOR,WINE,BEER    0.00            0"
+       "               date  store_nbr     family      sales  onpromotion\n",
+       "id                                                               \n",
+       "2890663  2017-06-15         16    POULTRY  48.267002            0\n",
+       "590393   2013-11-28         24  MAGAZINES   0.000000            0\n",
+       "663785   2014-01-09         33  MAGAZINES   0.000000            0\n",
+       "2772047  2017-04-09         38   HARDWARE   0.000000            0\n",
+       "817057   2014-04-05         34       EGGS  51.000000            0"
       ]
      },
      "execution_count": 6,
@@ -528,9 +525,9 @@
     {
      "data": {
       "text/plain": [
-       "POULTRY            809\n",
-       "BREAD/BAKERY       793\n",
-       "HOME APPLIANCES    789\n",
+       "HOME AND KITCHEN II    1615\n",
+       "PERSONAL CARE          1565\n",
+       "FROZEN FOODS           1553\n",
        "Name: family, dtype: int64"
       ]
      },
@@ -646,13 +643,13 @@
       "--- Layer Infra: Running Project: store-sales ---\n",
       "* Building test_features...\n",
       "* Building train_features...\n",
-      "               date  store_nbr                   family   sales  onpromotion\n",
-      "id                                                                          \n",
-      "867069   2014-05-03         37  PLAYERS AND ELECTRONICS    0.00            0\n",
-      "1234427  2014-11-25         44           PREPARED FOODS  372.10            0\n",
-      "1103847  2014-09-13         30                  PRODUCE  386.91            0\n",
-      "763588   2014-03-06         34                BABY CARE    1.00            0\n",
-      "1265638  2014-12-13         20         LIQUOR,WINE,BEER    0.00            0\n",
+      "               date  store_nbr     family      sales  onpromotion\n",
+      "id                                                               \n",
+      "2890663  2017-06-15         16    POULTRY  48.267002            0\n",
+      "590393   2013-11-28         24  MAGAZINES   0.000000            0\n",
+      "663785   2014-01-09         33  MAGAZINES   0.000000            0\n",
+      "2772047  2017-04-09         38   HARDWARE   0.000000            0\n",
+      "817057   2014-04-05         34       EGGS  51.000000            0\n",
       "--- Layer Infra: Run Complete! ---\n"
      ]
     }
@@ -744,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "899eab18",
    "metadata": {
     "papermill": {
@@ -763,8 +760,8 @@
      "text": [
       "--- Layer Infra: Running Project: store-sales ---\n",
       "* Training model...\n",
-      "\tmodel > Metric >XGB_rmse:1.7136870689218906\n",
-      "\tmodel > Metric >Linear_rmse:3.6609792298511326\n",
+      "\tmodel > Metric >XGB_rmse:1.7053408067392832\n",
+      "\tmodel > Metric >Linear_rmse:3.6693205218294525\n",
       "--- Layer Infra: Run Complete! ---\n"
      ]
     }
