--- a/storesales/storesales-ts-starter.ipynb
+++ b/storesales/storesales-ts-starter.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "39682650",
    "metadata": {
     "papermill": {
@@ -179,11 +179,160 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Layer Infra: Running Project: store-sales ---\n",
-      "* Building train...\n",
-      "* Building test...\n",
-      "--- Layer Infra: Run Complete! ---\n"
+      "* Building train...\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>store_nbr</th>\n",
+       "      <th>family</th>\n",
+       "      <th>sales</th>\n",
+       "      <th>onpromotion</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2890663</th>\n",
+       "      <td>2017-06-15</td>\n",
+       "      <td>16</td>\n",
+       "      <td>POULTRY</td>\n",
+       "      <td>48.267002</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>590393</th>\n",
+       "      <td>2013-11-28</td>\n",
+       "      <td>24</td>\n",
+       "      <td>MAGAZINES</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>663785</th>\n",
+       "      <td>2014-01-09</td>\n",
+       "      <td>33</td>\n",
+       "      <td>MAGAZINES</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2772047</th>\n",
+       "      <td>2017-04-09</td>\n",
+       "      <td>38</td>\n",
+       "      <td>HARDWARE</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>817057</th>\n",
+       "      <td>2014-04-05</td>\n",
+       "      <td>34</td>\n",
+       "      <td>EGGS</td>\n",
+       "      <td>51.000000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177723</th>\n",
+       "      <td>2013-04-10</td>\n",
+       "      <td>45</td>\n",
+       "      <td>HOME CARE</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>923059</th>\n",
+       "      <td>2014-06-03</td>\n",
+       "      <td>9</td>\n",
+       "      <td>HOME AND KITCHEN II</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1811584</th>\n",
+       "      <td>2015-10-16</td>\n",
+       "      <td>39</td>\n",
+       "      <td>HOME AND KITCHEN II</td>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2204880</th>\n",
+       "      <td>2016-05-25</td>\n",
+       "      <td>24</td>\n",
+       "      <td>HOME CARE</td>\n",
+       "      <td>240.000000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>897336</th>\n",
+       "      <td>2014-05-20</td>\n",
+       "      <td>37</td>\n",
+       "      <td>AUTOMOTIVE</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>50000 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               date  store_nbr               family       sales  onpromotion\n",
+       "id                                                                          \n",
+       "2890663  2017-06-15         16              POULTRY   48.267002            0\n",
+       "590393   2013-11-28         24            MAGAZINES    0.000000            0\n",
+       "663785   2014-01-09         33            MAGAZINES    0.000000            0\n",
+       "2772047  2017-04-09         38             HARDWARE    0.000000            0\n",
+       "817057   2014-04-05         34                 EGGS   51.000000            0\n",
+       "...             ...        ...                  ...         ...          ...\n",
+       "177723   2013-04-10         45            HOME CARE    0.000000            0\n",
+       "923059   2014-06-03          9  HOME AND KITCHEN II    0.000000            0\n",
+       "1811584  2015-10-16         39  HOME AND KITCHEN II   29.000000            0\n",
+       "2204880  2016-05-25         24            HOME CARE  240.000000            0\n",
+       "897336   2014-05-20         37           AUTOMOTIVE    2.000000            0\n",
+       "\n",
+       "[50000 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -195,7 +344,11 @@
     "def build_test_data():\n",
     "    return pd.read_csv(path+'test.csv', index_col=0)\n",
     "\n",
-    "layer.run([build_train_data, build_test_data])"
+    "# layer.run([build_train_data, build_test_data])\n",
+    "# train_data = layer.get_dataset(\"train\").to_pandas()\n",
+    "# test_data = layer.get_dataset(\"test\").to_pandas()\n",
+    "\n",
+    "build_train_data()"
    ]
   },
   {
@@ -241,8 +394,7 @@
     }
    ],
    "source": [
-    "train_data = layer.get_dataset(\"train\").to_pandas()\n",
-    "test_data = layer.get_dataset(\"test\").to_pandas()\n",
+    "\n",
     "\n",
     "print('Number of train samples: ', len(train_data.index))\n",
     "print('Number of test samples: ', len(test_data.index))\n",
@@ -741,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "899eab18",
    "metadata": {
     "papermill": {
@@ -758,18 +910,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Layer Infra: Running Project: store-sales ---\n",
       "* Training model...\n",
       "\tmodel > Metric >XGB_rmse:1.7053408067392832\n",
-      "\tmodel > Metric >Linear_rmse:3.6693205218294525\n",
-      "--- Layer Infra: Run Complete! ---\n"
+      "\tmodel > Metric >Linear_rmse:3.6693205218294525\n"
      ]
     }
    ],
    "source": [
     "@model(\"model\")\n",
     "def train():\n",
-    "    train_data = layer.get_dataset(\"train_features\").to_pandas()\n",
+    "    train_data = build_test_features()\n",
     "    test_data = layer.get_dataset(\"test_features\").to_pandas()\n",
     "    X_train = train_data[features]\n",
     "    y_train = train_data[target]\n",
@@ -789,7 +939,8 @@
     "    y_val_pred = np.where(y_val_pred<0, 0, y_val_pred)\n",
     "    layer.log_metric('Linear_rmse', np.sqrt(mean_squared_log_error(y_val, y_val_pred)))\n",
     "\n",
-    "layer.run(train)"
+    "# layer.run(train)\n",
+    "train()"
    ]
   },
   {
