--- a/storesales/storesales-ts-starter_original.ipynb
+++ b/storesales/storesales-ts-starter_original.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c3ad7bf7",
    "metadata": {
     "papermill": {
@@ -106,10 +106,16 @@
     {
      "data": {
       "text/plain": [
-       "['storesales-ts-starter.ipynb', 'test.csv', 'train.csv', '.ipynb_checkpoints']"
+       "['storesales-ts-starter.ipynb',\n",
+       " 'test.csv',\n",
+       " '__init__.py',\n",
+       " 'README.md',\n",
+       " 'storesales-ts-starter_original.ipynb',\n",
+       " '.ipynb_checkpoints',\n",
+       " 'train_sampled.csv']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
