--- a/titanic/titanic.ipynb
+++ b/titanic/titanic.ipynb
@@ -2,20 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'Layer' from 'layer' (/Users/mehmetecevit/.pyenv/versions/3.8.5/lib/python3.8/site-packages/layer/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/d3/zq21tm7n5xz_zwlx6rrzlmk80000gn/T/ipykernel_56281/3471330798.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'..'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mlayer\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mLayer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdataset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mensemble\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'Layer' from 'layer' (/Users/mehmetecevit/.pyenv/versions/3.8.5/lib/python3.8/site-packages/layer/__init__.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Layer Infra: Running Project: ltv_project ---\n",
+      "Layer Infra: Installing scikit-learn>=0.18...\n",
+      "* Building raw_passengers...\n",
+      "\traw_passengers > Total passengers: 891\n",
+      "* Building features...\n",
+      "\tfeatures > Features: ['Survived', 'Pclass', 'Sex', 'Age', 'SibSp', 'Parch', 'Fare']\n",
+      "\tfeatures > Total Count: 891\n",
+      "* Training survival_model...\n",
+      "\tsurvival_model > Training data count: 891\n",
+      "\tsurvival_model > Metric >accuracy:0.7989\n",
+      "--- Layer Infra: Run Complete! ---\n"
      ]
     }
    ],
@@ -23,22 +29,12 @@
     "import sys\n",
     "sys.path.append('..')\n",
     "\n",
-    "from layer import Layer, dataset, model\n",
+    "from layersdk import Layer, dataset, model\n",
     "\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
     "import pandas as pd\n",
-    "\n",
-    "\n",
-    "@dataset(\"dummy_dataset\")\n",
-    "def build_dummy():\n",
-    "    data = [[1, 'tom', '01011999'], [2, 'nick', '01011983'],\n",
-    "            [3, 'juli', '01012002']]\n",
-    "    columns = ['id', 'name', 'birth']\n",
-    "\n",
-    "    df = pd.DataFrame(data, columns=columns)\n",
-    "    return df\n",
     "\n",
     "\n",
     "@dataset('raw_passengers')\n",
@@ -122,42 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<code object foo at 0x170b57d40, file \"/var/folders/d3/zq21tm7n5xz_zwlx6rrzlmk80000gn/T/ipykernel_50111/2381311301.py\", line 7>\n",
-      "50\n"
-     ]
-    }
-   ],
-   "source": [
-    "import marshal, types\n",
-    "\n",
-    "def test(x):\n",
-    "    return x * 5\n",
-    "\n",
-    "\n",
-    "def foo(x):\n",
-    "    return test(x)\n",
-    "\n",
-    "\n",
-    "print(foo.__code__)\n",
-    "\n",
-    "code_string = marshal.dumps(foo.__code__)\n",
-    "\n",
-    "code = marshal.loads(code_string)\n",
-    "func = types.FunctionType(code, globals(), \"some_func_name\")\n",
-    "\n",
-    "print(func(10))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
