--- a/titanic/titanic.ipynb
+++ b/titanic/titanic.ipynb
@@ -4,52 +4,210 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "\n",
+    "from layersdk import dataset, model, Layer, File, Dataset, SQL, assert_unique, \\\n",
+    "    assert_not_null, assert_valid_values, assert_true\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Layer Infra: Running Project: ltv_project ---\n",
-      "Layer Infra: Installing scikit-learn>=0.18...\n",
-      "* Building raw_passengers...\n",
-      "\traw_passengers > Total passengers: 891\n",
-      "* Building features...\n",
-      "\tfeatures > Features: ['Survived', 'Pclass', 'Sex', 'Age', 'SibSp', 'Parch', 'Fare']\n",
-      "\tfeatures > Total Count: 891\n",
-      "* Training survival_model...\n",
-      "\tsurvival_model > Training data count: 891\n",
-      "\tsurvival_model > Metric >accuracy:0.7989\n",
-      "--- Layer Infra: Run Complete! ---\n"
+      "\tTest SUCCESS: assert_valid_values('Sex', [1, 0])\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Fare</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.2500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>71.2833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.9250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>53.1000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>886</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>887</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>888</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>23.4500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>889</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>890</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.7500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>891 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Survived  Pclass  Sex   Age  SibSp  Parch     Fare\n",
+       "0           0       3    1  22.0      1      0   7.2500\n",
+       "1           1       1    0  38.0      1      0  71.2833\n",
+       "2           1       3    0  26.0      0      0   7.9250\n",
+       "3           1       1    0  35.0      1      0  53.1000\n",
+       "4           0       3    1  35.0      0      0   8.0500\n",
+       "..        ...     ...  ...   ...    ...    ...      ...\n",
+       "886         0       2    1  27.0      0      0  13.0000\n",
+       "887         1       1    0  19.0      0      0  30.0000\n",
+       "888         0       3    0  24.0      1      2  23.4500\n",
+       "889         1       1    1  26.0      0      0  30.0000\n",
+       "890         0       3    1  32.0      0      0   7.7500\n",
+       "\n",
+       "[891 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.path.append('..')\n",
-    "\n",
-    "from layersdk import Layer, dataset, model\n",
-    "\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "import pandas as pd\n",
-    "\n",
-    "\n",
-    "@dataset('raw_passengers')\n",
-    "def read_and_clean_dataset():\n",
-    "    df = pd.read_csv(\"titanic.csv\")\n",
-    "    layer.log(f\"Total passengers: {len(df)}\")\n",
-    "    return df\n",
-    "\n",
-    "\n",
     "def clean_sex(sex):\n",
     "    result = 0\n",
-    "    if sex == \"female\":\n",
-    "        result = 0\n",
-    "    elif sex == \"male\":\n",
-    "        result = 1\n",
+    "    if sex == \"female\": result = 0\n",
+    "    elif sex == \"male\": result = 1\n",
     "    return result\n",
     "\n",
     "\n",
@@ -57,63 +215,39 @@
     "    age = data[0]\n",
     "    pclass = data[1]\n",
     "    if pd.isnull(age):\n",
-    "        if pclass == 1:\n",
-    "            return 37\n",
-    "        elif pclass == 2:\n",
-    "            return 29\n",
-    "        else:\n",
-    "            return 24\n",
+    "        if pclass == 1: return 37\n",
+    "        elif pclass == 2: return 29\n",
+    "        else: return 24\n",
     "    else:\n",
     "        return age\n",
     "\n",
-    "\n",
-    "@dataset('features')\n",
-    "def extract_features():\n",
-    "    df = layer.get_dataset(\"raw_passengers\").to_pandas()\n",
-    "\n",
+    "@assert_valid_values('Sex', [1, 0])\n",
+    "@dataset('passengers', depends=[File('titanic.csv')])\n",
+    "def read_dataset():\n",
+    "    df = pd.read_csv(\"titanic.csv\")\n",
     "    df['Sex'] = df['Sex'].apply(clean_sex)\n",
     "    df['Age'] = df[['Age', 'Pclass']].apply(clean_age, axis=1)\n",
-    "\n",
     "    df = df.drop([\"PassengerId\", \"Name\", \"Cabin\", \"Ticket\", \"Embarked\"], axis=1)\n",
-    "\n",
-    "    layer.log(f'Features: {list(df.columns)}')\n",
-    "    layer.log(f'Total Count: {len(df)}')\n",
     "    return df\n",
-    "\n",
     "\n",
     "@model(name='survival_model')\n",
     "def train():\n",
-    "    df = layer.get_dataset(\"features\").to_pandas()\n",
-    "    layer.log(f\"Training data count: {len(df)}\")\n",
-    "\n",
+    "    df = layer.get_dataset(\"passengers\").to_pandas()\n",
     "    X = df.drop([\"Survived\"], axis=1)\n",
     "    y = df[\"Survived\"]\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2,\n",
     "                                                        random_state=42)\n",
-    "\n",
     "    random_forest = RandomForestClassifier(n_estimators=100)\n",
     "    random_forest.fit(X_train, y_train)\n",
     "    y_pred = random_forest.predict(X_test)\n",
     "    acc = accuracy_score(y_test, y_pred)\n",
-    "    layer.log_metric(\"accuracy\", f'{acc:.4f}')\n",
+    "    layer.log_metric(\"accuracy\", acc)\n",
     "    return random_forest\n",
     "\n",
-    "\n",
-    "# ++ init Layer\n",
     "layer = Layer(project_name=\"ltv_project\", environment='requirements.txt')\n",
-    "\n",
-    "# ++ To run the whole project on Layer Infra\n",
-    "layer.run([read_and_clean_dataset, extract_features, train])\n",
-    "\n",
-    "# ++ To train model on Layer infra\n",
-    "# layer.run([train])\n",
-    "\n",
-    "# ++ To debug the code locally, just call the function:\n",
+    "# layer.run([read_dataset, train])\n",
     "# train()\n",
-    "# extract_features()\n",
-    "\n",
-    "# read_and_clean_dataset()\n",
-    "# train()"
+    "read_dataset()"
    ]
   },
   {
